<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/closeButton"-->
                <!--                        android:layout_width="40dp"-->
                <!--                        android:layout_height="40dp"-->
                <!--                        android:layout_gravity="center_vertical|end"-->
                <!--                        android:padding="5dp"-->
                <!--                        android:scaleType="centerInside"-->
                <!--                        android:background="@drawable/shape_button"-->
                <!--                        android:src="@drawable/ic_close" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_connection"
                    android:textColor="@color/colorTextDark"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <ImageButton
                    android:id="@+id/btnDone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_button"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_done" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHostname"
                style="@style/textInputFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connection_hostname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHostname"
                    style="@style/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPort"
                style="@style/textInputFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connection_port">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPort"
                    style="@style/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/textInputFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connection_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/textInputFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connection_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cbAuthorize"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/connection_authorize" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>